--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,6 +27,7 @@
 
             <div id="load-project" style="visibility:hidden">
                 <button id="create-time-column-btn">add time series column +</button>
+                <button id="save-btn">save</button>
                 <div id="main-container">
                     <div id="label-container">
                         
@@ -42,6 +43,7 @@
         <% if(hasExistingProject){ %>
             <div id="load-project">
                 <button id="create-time-column-btn">add time series column +</button>
+                <button id="save-btn">save</button>
                 <div id="main-container">
                     <div id="label-container">
                         
@@ -56,6 +58,8 @@
     </body>
     <!-- <script src="index.js"></script> -->
     <script src="../js/api_caller.js" type="module"></script>
+    <script src="../js/main.js" type="module"></script>
+    <script src="../js/page_data.js" type="module"></script>
     <script src="../js/input.js" type="module"></script>
     <script src="../js/timeseries.js" type="module"></script>
     <script src="../js/warning.js" type="module"></script>
