--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,10 +34,10 @@
                         
                     </div>
                     <div id="timeseries-container">
-                        <!-- <button id="create-time-column-btn">+</button> -->
+
                     </div>
                     <div class="buttonsCopyPaste">
-                        <button id="copy">copy column data</button><br>
+                        <button id="copy">copy</button><br>
                         <button id="paste">paste</button>
                     </div>
                 </div>
@@ -54,9 +54,9 @@
                         
                     </div>
                     <div id="timeseries-container">
-                        <!-- <button id="create-time-column-btn">+</button> -->
+
                     </div>
-                    <div class="buttons">
+                    <div class="buttonsCopyPaste">
                         <button id="copy">copy</button><br>
                         <button id="paste">paste</button>
                     </div>
@@ -65,12 +65,10 @@
         <% } %>
         
     </body>
-    <!-- <script src="index.js"></script> -->
     <script src="../js/api_caller.js" type="module"></script>
     <script src="../js/main.js" type="module"></script>
     <script src="../js/page_data.js" type="module"></script>
     <script src="../js/input.js" type="module"></script>
     <script src="../js/timeseries.js" type="module"></script>
     <script src="../js/warning.js" type="module"></script>
-    <!-- <script src="../js/timeseries.js"></script> -->
 </html>
