--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -28,7 +28,6 @@
 
             <div id="load-project" style="visibility:hidden">
                 <button id="create-time-column-btn">add time series column +</button>
-                
                 <div id="main-container">
                     <div id="label-container">
                         
@@ -38,7 +37,7 @@
                     </div>
                     <div class="buttonsCopyPasteSave">
                         <button id="copy">copy</button><br>
-                        <button id="paste">paste</button><br>
+                        <button id="paste">paste</button>
                         <button id="save-btn">save</button>
                     </div>
                 </div>
@@ -58,7 +57,7 @@
                     </div>
                     <div class="buttonsCopyPasteSave">
                         <button id="copy">copy</button><br>
-                        <button id="paste">paste</button><br>
+                        <button id="paste">paste</button>
                         <button id="save-btn">save</button>
                     </div>
                 </div>
@@ -66,10 +65,10 @@
         <% } %>
         
     </body>
-    <script src="../js/homePage/api_caller.js" type="module"></script>
-    <script src="../js/homepage/home.js" type="module"></script>
-    <script src="../js/homePage/page_data.js" type="module"></script>
-    <script src="../js/homePage/input.js" type="module"></script>
-    <script src="../js/homePage/tableGeneration.js" type="module"></script>
+    <script src="../js/api_caller.js" type="module"></script>
+    <script src="../js/home.js" type="module"></script>
+    <script src="../js/page_data.js" type="module"></script>
+    <script src="../js/input.js" type="module"></script>
+    <script src="../js/tableGeneration.js" type="module"></script>
     <script src="../js/utils/warning.js" type="module"></script>
 </html>
