--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -16,7 +16,7 @@
         <% if(!hasExistingProject){ %>
             
             <div id="new-project-data-input">
-                <p>Add attributes and their values</p>
+                <p>Add attributes and their values (comma separated)</p>
                 <div class="buttons">
                 <button id="add-attribute-btn">add</button><br>
                 <button id="proceed-btn">proceed</button>
